# Super-Alpaca-Bros

./: .gitignore  CMakeLists.txt
cmake/: FindSTEAMWORKS.cmake
doc/: JsonInformations.html
res/: init.json
res/gameobject/: alpaca.json  alpaca0.json  alpaca1.json  alpacahead.json  alpacahead0.json  alpacahead1.json  alpacaspit.json  numberviewer.json  outsidedeffect0.json
res/scene/: game.json  test.json  title.json  tutorial.json
src/: main.cpp
src/Title/: TitleBanner.cpp  TitleBanner.h  title.h
src/base/: Allocator.cpp  Allocator.hpp  AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp  Application.cpp  Application.hpp  Array.hpp  BitFlag.hpp  Camera.cpp  Camera.hpp  Collider.cpp  Collider.hpp  Component.cpp  Component.hpp  FileIO.cpp  FileIO.hpp  GameObject.cpp  GameObject.hpp  Json.cpp  Json.hpp  JsonScene.cpp  JsonScene.hpp  LuaPlayer.cpp  LuaPlayer.hpp  Math.cpp  Math.hpp  Physics.cpp  Physics.hpp  SDL.cpp  SDL.hpp  SDLInput.cpp  SDLInput.hpp  SDLMixer.cpp  SDLMixer.h  SDLWindow.cpp  SDLWindow.hpp  Scene.cpp  Scene.hpp  (+17 more)
src/game/: Alpaca.cpp  Alpaca.hpp  AlpacaAction.cpp  AlpacaAction.hpp  AlpacaHead.cpp  AlpacaHead.hpp  AlpacaSpit.cpp  AlpacaSpit.hpp  AlpacaWalkSound.cpp  AlpacaWalkSound.h  Banner.cpp  Banner.h  Button.cpp  Button.h  CameraController.cpp  CameraController.hpp  CooltimeViewer.cpp  CooltimeViewer.h  GameManager.cpp  GameManager.hpp  Ground.cpp  Ground.hpp  HitGauge.cpp  HitGauge.hpp  OutsidedEffect.cpp  OutsidedEffect.h  game.hpp
windows-binary/res/: init.json
windows-binary/res/gameobject/: alpacahead1.json  numberviewer.json  outsidedeffect1.json
windows-binary/res/shader/: default_frag.glsl
